# SecondoAssegnamento

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Errori e problemi nel codice.txt  HSTrain.cpp  HSTrain.h  HSTrainSuper.cpp  HSTrainSuper.h  Platform.h  Rail.h  RegionalTrain.cpp  RegionalTrain.h  Train.h  controller.cpp  controller.h  controller1.cpp  controller2.cpp  event.cpp  event.h  line_description.txt  line_description_1.txt  localStation.cpp  localStation.h  main.cpp  mainStation.cpp  mainStation.h  output_examples.txt  parkPlatform.cpp  parkPlatform.h  platform.h  platformT.cpp  readme.txt  standardPlatform.cpp  standardPlatform.h  station.cpp  station.h  stationP.cpp  stationS.cpp  timetables.txt  timetables_1.txt  (+6 more)
